--- a/source/index.html
+++ b/source/index.html
@@ -418,7 +418,7 @@
                   <source type="image/webp" srcset="img/requirements/requirements.webp, img/requirements/requirements@2x.webp 2x">
                   <source media="(max-width: 767px)" srcset="img/requirements/requirements-mobile.jpg, img/requirements/requirements-mobile@2x.jpg 2x">
                   <source media="(max-width: 1199px)" srcset="img/requirements/requirements-tablet.jpg, img/requirements/requirements-tablet@2x.jpg 2x">
-                  <img src="img/requirements/requirements.jpg" srcset="img/requirements/requirements@2x.jpg 2x" alt="Изображение блока." width="498" height="363">
+                  <img src="img/requirements/requirements.jpg" srcset="img/requirements/requirements@2x.jpg 2x" alt="Изображение блока." width="498" height="363" loading="lazy">
                 </picture>
               </div>
             </div>
@@ -803,7 +803,7 @@
                 <source type="image/webp" srcset="img/map/map.webp, img/map/map@2x.webp 2x">
                 <source media="(max-width: 767px)" srcset="img/map/map-mobile.jpg, img/map/map-mobile@2x.jpg 2x">
                 <source media="(max-width: 1199px)" srcset="img/map/map-tablet.jpg, img/map/map-tablet@2x.jpg 2x">
-                <img src="img/map/map.jpg" srcset="img/map/map@2x.jpg 2x" alt="Фотография слайда 1." width="1240" height="500">
+                <img src="img/map/map.jpg" srcset="img/map/map@2x.jpg 2x" alt="Фотография слайда 1." width="1240" height="500" loading="lazy">
               </picture>
             </div>
           </div>
@@ -816,7 +816,7 @@
               <source media="(max-width: 1199px)" type="image/webp" srcset="img/feedback/feedback-tablet.webp, img/feedback/feedback-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/feedback/feedback.webp, img/feedback/feedback@2x.webp 2x">
               <source media="(max-width: 1199px)" srcset="img/feedback/feedback-tablet.jpg, img/feedback/feedback-tablet@2x.jpg 2x">
-              <img src="img/feedback/feedback.jpg" srcset="img/feedback/feedback@2x.jpg 2x" alt="Фотография участника программы." width="1240" height="803">
+              <img src="img/feedback/feedback.jpg" srcset="img/feedback/feedback@2x.jpg 2x" alt="Фотография участника программы." width="1240" height="803" loading="lazy">
             </picture>
           </div>
           <div class="feedback__content">
