--- a/source/index.html
+++ b/source/index.html
@@ -459,11 +459,11 @@
               <li class="swiper-slide" data-group="internship">
                 <div class="news__img">
                   <picture>
-                    <source media="(max-width: 767px)" type="image/webp" srcset="img/news/internship-1.webp, img/news/internship-1@2x.webp 2x">
-                    <source media="(max-width: 1199px)" type="image/webp" srcset="img/news/internship-1-tablet.webp, img/news/internship-1-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="img/news/internship-1.webp, img/news/internship-1@2x.webp 2x">
-                    <source media="(max-width: 767px)" srcset="img/news/internship-1.jpg, img/news/internship-1@2x.jpg 2x">
-                    <source media="(max-width: 1199px)" srcset="img/news/internship-1-tablet.jpg, img/news/internship-1-tablet@2x.jpg 2x">
+                    <source media="(max-width: 767px)" type="image/webp" srcset="img/news/internship-1.webp, img/news/internship-1@2x.webp 2x" width="290" height="330">
+                    <source media="(max-width: 1199px)" type="image/webp" srcset="img/news/internship-1-tablet.webp, img/news/internship-1-tablet@2x.webp 2x" width="324" height="350">
+                    <source type="image/webp" srcset="img/news/internship-1.webp, img/news/internship-1@2x.webp 2x" width="604" height="400">
+                    <source media="(max-width: 767px)" srcset="img/news/internship-1.jpg, img/news/internship-1@2x.jpg 2x" width="290" height="330">
+                    <source media="(max-width: 1199px)" srcset="img/news/internship-1-tablet.jpg, img/news/internship-1-tablet@2x.jpg 2x" width="324" height="350">
                     <img src="img/news/internship-1.jpg" srcset="img/news/internship-1@2x.jpg 2x" alt="Изображение блока." width="604" height="400">
                   </picture>
                 </div>
@@ -485,9 +485,9 @@
               <li class="swiper-slide" data-group="travelling">
                 <div class="news__img">
                   <picture>
-                    <source media="(max-width: 1199px)" type="image/webp" srcset="img/news/travelling-1-tablet.webp, img/news/travelling-1-tablet@2x.webp 2x">
-                    <source type="image/webp" srcset="img/news/travelling-1.webp, img/news/travelling-1@2x.webp 2x">
-                    <source media="(max-width: 1199px)" srcset="img/news/travelling-1-tablet.jpg, img/news/travelling-1-tablet@2x.jpg 2x">
+                    <source media="(max-width: 1199px)" type="image/webp" srcset="img/news/travelling-1-tablet.webp, img/news/travelling-1-tablet@2x.webp 2x" width="324" height="350">
+                    <source type="image/webp" srcset="img/news/travelling-1.webp, img/news/travelling-1@2x.webp 2x" width="286" height="400">
+                    <source media="(max-width: 1199px)" srcset="img/news/travelling-1-tablet.jpg, img/news/travelling-1-tablet@2x.jpg 2x" width="324" height="350">
                     <img src="img/news/travelling-1.jpg" srcset="img/news/travelling-1@2x.jpg 2x" alt="Изображение блока." width="286" height="400">
                   </picture>
                 </div>
